--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcc 'AP'
 - !lcsh 'Art -- Periodicals'
 - !lcsh 'Science -- Periodicals'
+- GITenberg
 title: International Weekly Miscellany of Literature, Art and Science - Volume 1,
   No. 9, August 26, 1850
 url: http://www.gutenberg.org/ebooks/13797
